make hero section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Knowlede-vault</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
-    
+<body class="inter-font">
+    <header>
+        <!-- navbar section -->
+        <nav class="navbar">
+            <div class="logo"><img src="./assets/logo-navbar.png" alt="Knowlede-vault-logo">
+            </div>
+            <ul>
+                <li><a href="">Features</a></li>
+                <li><a href="">How It Works</a></li>
+                <li><a href="">Why It's Different</a></li>
+            </ul>
+            <div>
+                <button class="btn btn-1">Get Early Access</button>
+            </div>
+        </nav>
+        <hr>
+        <!-- hero-section -->
+         <section class="hero-section">
+                <div class="hero-popup">
+                    <p>Early Access Now Open</p>
+                </div>
+                    <h1 class="hero-tittle">Structured thinking,<br><Span id="text-green">Not just note-taking.</Span></h1>
+
+                    <p class="hero-description">A private space to store notes, links, and learning summaries — designed to <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                    <div class="hero-button">
+                        <button> Start Building Your Vault</button>
+                        <button>See How It Works</button>
+                    </div> 
+         </section>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
