2nd section complete

--- a/index.html
+++ b/index.html
@@ -28,18 +28,81 @@
         <!-- hero-section -->
          <section class="hero-section">
                 <div class="hero-popup">
+                    <img src="./assets/Active-icon.png" alt="">
                     <p>Early Access Now Open</p>
                 </div>
                     <h1 class="hero-tittle">Structured thinking,<br><Span id="text-green">Not just note-taking.</Span></h1>
 
                     <p class="hero-description">A private space to store notes, links, and learning summaries — designed to <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                     <div class="hero-button">
-                        <button> Start Building Your Vault</button>
-                        <button>See How It Works</button>
+                        <button class="btn btn-2"> Start Building Your Vault <img src="./assets/ArrowRight.png"></button>
+                        <button id="btn-3" class="btn btn-2 "><img src="./assets/Play.png">See How It Works</button>
                     </div> 
          </section>
     </header>
-    <main></main>
+    <main>'
+        <section class="card-section">
+            <div class="card-text-contant">
+                <h1 class="card-headline">Notes don't fail, Structure does.</h1>
+                <p class="card-description">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+            <div class="card-items">
+                <div class="card">
+                    <div class="card-icon"><img src="./assets/Vector.png" alt="" srcset=""></div>
+                    <h3 class="card-tittle">Scattered notes</h3>
+                    <p class="card-info">Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <div class="card-icon"><img src="./assets/Brain.png" alt="" srcset=""></div>
+                    <h3 class="card-tittle">Bookmark overload</h3>
+                    <p class="card-info">Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="card">
+                    <div class="card-icon"><img src="./assets/Bookmarks.png" alt="" srcset=""></div>
+                    <h3 class="card-tittle">No idea connections</h3>
+                    <p class="card-info">Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="card">
+                    <div class="card-icon"><img src="./assets/Info.png" alt="" srcset=""></div>
+                    <h3 class="card-tittle">Forgetting What<br>
+                    You learned</h3>
+                    <p class="card-info">Knowledge fades because there's no system to retain it.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="brain-section">
+            <div>
+                <div>
+                    <img src="" alt="">
+                </div>
+            <div>
+                <p></p>
+                <h1></h1>
+                <p></p>
+                <div>
+                    <div>
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p></p>
+                    </div>
+                    <div>
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p></p>
+                    </div>
+                    <div>
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p></p>
+                    </div>
+                    <div>
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
