Brain Section Complete

--- a/index.html
+++ b/index.html
@@ -72,35 +72,36 @@
         </section>
 
         <section class="brain-section">
-            <div>
-                <div>
-                    <img src="" alt="">
-                </div>
-            <div>
-                <p></p>
-                <h1></h1>
-                <p></p>
-                <div>
-                    <div>
+            <div class="brain-img">
+                <img src="./assets/knowledge.png" alt="">
+            </div>
+                
+            <div class="brain-text-contain">
+                <p><span id="text-green">THE SOLUTION</span></p>
+                <h1 class="brain-tittle">Your second Brain,<br>Structured by Design.</h1>
+                <p class="brain-info">Personal Knowledge Vault isn't another note-taking app. z <br>
+                It's a thinking environment where every note, link, and summary <br>
+                becomes part of an interconnected web of understanding.</p>
+               <div class="text-point-section">
+                    <div class="text-point">
                         <img src="./assets/CheckCircle.png" alt="">
-                        <p></p>
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </div >
+                    <div class="text-point">
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p>Connect related concepts automatically as you write</p>
                     </div>
-                    <div>
+                    <div class="text-point">
                         <img src="./assets/CheckCircle.png" alt="">
-                        <p></p>
+                        <p>Build lasting knowledge through reflection prompts</p>
                     </div>
-                    <div>
+                    <div class="text-point">
                         <img src="./assets/CheckCircle.png" alt="">
-                        <p></p>
-                    </div>
-                    <div>
-                        <img src="./assets/CheckCircle.png" alt="">
-                        <p></p>
+                        <p>Find anything instantly with semantic search</p>
                     </div>
                 </div>
             </div>
-            </div>
-
+            
         </section>
     </main>
     <footer></footer>
