--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body class="inter-font">
@@ -100,10 +103,46 @@
                         <p>Find anything instantly with semantic search</p>
                     </div>
                 </div>
+            </div>     
+        </section>
+
+        <section class="cta-contant">
+            <div>
+                <h1 class="cta-tittle">Ready to think more clearly?</h1>
+                <p class="brain-info">Join thousands of learners who are building their personal knowledge vaults.Start free,<br> no credit card required.</p>
+                <div>
+                    <button class="btn cta-btn">Get Early Access <img src="./assets/ArrowRight.png" alt=""></button>
+                </div>
+                <p class="brain-info">Free during early access • No credit card needed</p>
             </div>
-            
         </section>
     </main>
-    <footer></footer>
+<!-- <footer class="footer">
+    <div class="footer-contant">
+        <div class="footer-main-contant">
+            <div class="footer-logo">
+                <img src="./assets/logo-footer.png" alt="logo">
+            </div>
+
+            <div class="social-div">
+                <p>Social Links</p>
+                <div class="social-icon">
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <p class="footer-copy">
+            &COPY; 2026 Personal Knowledge Vault. All rights reserved.
+        </p>
+
+    </div>
+</footer>
+     -->
 </body>
+
 </html>
