--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             </div>
         </section>
     </main>
-<!-- <footer class="footer">
-    <div class="footer-contant">
+ <footer class="footer">
         <div class="footer-main-contant">
             <div class="footer-logo">
                 <img src="./assets/logo-footer.png" alt="logo">
@@ -132,17 +131,13 @@
                     <i class="fa-brands fa-linkedin"></i>
                 </div>
             </div>
-        </div>
-
-        <hr>
-
-        <p class="footer-copy">
-            &COPY; 2026 Personal Knowledge Vault. All rights reserved.
-        </p>
-
+    </div>
+    <div class="footer-copy">
+        <hr id="hr-color">
+        <p>&COPY;2026 Personal Knowledge Vault. All rights reserved.</p>
     </div>
 </footer>
-     -->
+
 </body>
 
 </html>
